--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
     height: clamp(360px, 60vh, 425px); 
     top: 50%;
     left: 50%;
-    translate: -50% -50%;
+    transform: translate(-50%, -50%);
     padding: 1.9rem 2rem 2rem 1.9rem;
     border-radius: 25px;
 }
